--- a/requirements.txt
+++ b/requirements.txt
@@ -30,6 +30,7 @@ prompt_toolkit==3.0.47
 psutil==6.0.0
 ptyprocess==0.7.0
 pure_eval==0.2.3
+pygame==2.6.0
 Pygments==2.18.0
 pyparsing==3.1.4
 python-dateutil==2.9.0.post0
